spacing weird bug workaround

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -34,6 +34,7 @@ table.credlink {
 }
 
 table.credlink th {
+    text-align: center;
     font-size: 20px;
     padding: 3px;
     text-decoration: underline;
